clusters/talos-robbinsdale/apps/home/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /www/assets/config.yml
          subPath: config.yml
      volumes:
      - name: config-volume
        configMap:
          name: homer-config
