clusters/talos-robbinsdale/apps/home/homer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer
  namespace: homer
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "homer.rajsingh.info"
    - "homer.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homer
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
